--- a/templates/index.html
+++ b/templates/index.html
@@ -19,8 +19,8 @@
   <input type="password" name="contrasena" id="contrasena">
   <br> 
   <br>
-  <label for="nombre de la mascota">Nombre de la mascota:</label>
-  <input type="text" name="nombre de la mascota" id="nombre de la mascota">
+  <label for="nombre_mascota">Nombre de la mascota:</label>
+  <input type="text" name="nombre_mascota" id="nombre_mascota">
   <br>
   <br>
   <label for="raza">Raza:</label>
@@ -31,7 +31,7 @@
   <input type="number" name="edad" id="edad">
   <br>
   <br>
-  <input type="submit" value="Ingresar">
+  <input type="submit" value="Registrarse">
   </form>
 </body>
 </html>
