--- a/templates/resultados.html
+++ b/templates/resultados.html
@@ -15,8 +15,8 @@
   <p>Raza: {{raza}}</p>
   <p>Edad: {{edad}}</p>
   <h2>Datos del cuidador</h2>
-  <p>Nombre del cuidador: {{usuario2}}</p>
-  <p>Contraseña: {{contrasena2}}</p>
+  <p>Nombre del cuidador: {{Ucuidador}}</p>
+  <p>Contraseña: {{Ccuidador}}</p>
   <p>Direccion del cuidador: {{direccion}}</p>
 
 </body>
