--- a/templates/cuidador.html
+++ b/templates/cuidador.html
@@ -11,18 +11,18 @@
 
   <h1>Registro Cuidador</h1> 
     
-  <label for="usuario2">Usuario:</label>
-  <input type="text" name="usuario2" id="usuario2">
+  <label for="Ucuidador">Usuario:</label>
+  <input type="text" name="Ucuidador" id="Ucuidador">
   <br>
   <br>
-  <label for="contrasena2">Contrasena:</label>
-  <input type="password" name="contrasena2" id="contrasena2">
+  <label for="Ccuidador">Contraseña:</label>
+  <input type="password" name="Ccuidador" id="Ccuidador">
   <br>
   <br>
   <label for="direccion">Direccion del cuidador:</label>
   <input type="text" name="direccion" id="direccion"><br>
   <br>
-  <input type="submit" value="Ingresar">
+  <input type="submit" value="Registrarse">
   </form>
 </body>
 </html>
