--- a/templates/cuidador.html
+++ b/templates/cuidador.html
@@ -11,12 +11,12 @@
 
   <h1>Registro Cuidador</h1> 
     
-  <label for="Ucuidador">Usuario:</label>
-  <input type="text" name="Ucuidador" id="Ucuidador">
+  <label for="usuario2">Usuario:</label>
+  <input type="text" name="usuario2" id="usuario2">
   <br>
   <br>
-  <label for="Ccuidador">Contraseña:</label>
-  <input type="password" name="Ccuidador" id="Ccuidador">
+  <label for="contrasena2">Contraseña:</label>
+  <input type="password" name="contrasena2" id="contrasena2">
   <br>
   <br>
   <label for="direccion">Direccion del cuidador:</label>
