--- a/templates/cuidador.html
+++ b/templates/cuidador.html
@@ -7,7 +7,7 @@
   <title>Cuidador</title>
 </head>
 <body>
-  <form action="/" method="post" enctype="multipart/form-data">
+    <form action="/cuidador" method="post" enctype="multipart/form-data">
 
   <h1>Registro Cuidador</h1> 
     
@@ -19,7 +19,7 @@
   <input type="password" name="contrasena2" id="contrasena2">
   <br>
   <br>
-  <label for="direccion">Direccion del cuidador:</label>
+  <label for="direccion">Direccion:</label>
   <input type="text" name="direccion" id="direccion"><br>
   <br>
   <input type="submit" value="Registrarse">
