--- a/templates/resultados.html
+++ b/templates/resultados.html
@@ -6,18 +6,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Resultados</title>
 </head>
-<body>
-  <h1>Datos recibidos</h1>
-  <h2>Datos del cuidador y la mascota</h2>
-  <p>Nombre del dueño: {{usuario}}</p>
-  <p>Contraseña: {{contrasena}}</p>
-  <p>Nombre de la mascota: {{nombre_mascota}}</p>
-  <p>Raza: {{raza}}</p>
-  <p>Edad: {{edad}}</p>
-  <h2>Datos del cuidador</h2>
-  <p>Nombre del cuidador: {{usuario2}}</p>
-  <p>Contraseña: {{contrasena2}}</p>
-  <p>Direccion del cuidador: {{direccion}}</p>
+  <body>
+    <h1>Datos recibidos</h1>
+    <h2>Datos del dueño y la mascota</h2>
+    <p>Nombre del dueño: {{ usuario }}</p>
+    <p>Contraseña: {{ contrasena }}</p>
+    <p>Nombre de la mascota: {{ nombre_mascota }}</p>
+    <p>Raza: {{ raza }}</p>
+    <p>Edad: {{ edad }}</p>
+    <h2>Datos del cuidador</h2>
+    <p>Nombre del cuidador: {{ usuario2 }}</p>
+    <p>Contraseña: {{ contrasena2 }}</p>
+    <p>Dirección del cuidador: {{ direccion }}</p>
+  </body>
 
-</body>
 </html>
