--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
   <input type="text" name="usuario" id="usuario">
   <br>
   <br>
-  <label for="contrasena">Contrasena:</label>
+  <label for="contrasena">Contraseña:</label>
   <input type="password" name="contrasena" id="contrasena">
   <br> 
   <br>
