--- a/templates/resultados.html
+++ b/templates/resultados.html
@@ -4,12 +4,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="static/style.css">
   <title>Resultados</title>
 </head>
   <body>
+    <h1>Datos conseguidos:</h1>
+    <br>
     <h2>Datos del dueño y la mascota</h2>
     {% for data in data_storage %}
-      
       <p>Nombre del dueño: {{ data.usuario }}</p>
       <p>Contraseña: {{ data.contrasena }}</p>
       <p>Nombre de la mascota: {{ data.nombre_mascota }}</p>
